--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="terms.html">Terms and conditions</a></li>
-                    <li><a href="privacy.html">Privacy policy</a></li>
+                    <li><a href="Privacy.html.html">Privacy policy</a></li>
                     <li><a href="refund.html">Refund policy</a></li>
                     <li><a href="Login.html">Login</a></li>
 
@@ -480,7 +480,7 @@
     <script src="assets/js/main.js"></script>
 
     <nav>
-    <href="privacy.html">
+    <href="Privacy.html.html">
     
     </nav>
     <href="Terms.html">
