--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="terms.html">Terms and conditions</a></li>
                     <li><a href="Privacy.html.html">Privacy policy</a></li>
-                    <li><a href="refund.html">Refund policy</a></li>
+                    <li><a href="Refund.html">Refund policy</a></li>
                     <li><a href="Login.html">Login</a></li>
 
                 </ul>
