--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <li><a href="#hero" class="active">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="terms.html">Terms and conditions</a></li>
+                    <li><a href="Terms.html">Terms and conditions</a></li>
                     <li><a href="Privacy.html.html">Privacy policy</a></li>
                     <li><a href="Refund.html">Refund policy</a></li>
                     <li><a href="Login.html">Login</a></li>
