--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="/img/favicon.png" rel="icon">
+    <link href="/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -19,14 +19,14 @@
         rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/vendor/aos/aos.css" rel="stylesheet">
+    <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Main CSS File -->
-    <link href="/Nextgen/assets/css/main.css" rel="stylesheet">
+    <link href="/Nextgen//css/main.css" rel="stylesheet">
 
 
     <!-- =======================================================
@@ -110,7 +110,7 @@
 
             <a href="index.html" class="logo d-flex align-items-center">
                 <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="assets/img/logo.png" alt=""> -->
+                <!-- <img src="/img/logo.png" alt=""> -->
                 <h1 class="sitename">Nextgen</h1>
             </a>
 
@@ -135,12 +135,12 @@
 
         <!-- Hero Section -->
         <section id="hero" class="hero section dark-background">
-            <img src="assets/img/hero-bg-2.jpg" alt="" class="hero-bg">
+            <img src="/img/hero-bg-2.jpg" alt="" class="hero-bg">
 
             <div class="container">
                 <div class="row gy-4 justify-content-between">
                     <div class="col-lg-4 order-lg-last hero-img" data-aos="zoom-out" data-aos-delay="100">
-                        <img src="./assets/img/LMS1.png" class="img-fluid animated" alt="">
+                        <img src=".//img/LMS1.png" class="img-fluid animated" alt="">
                     </div>
 
                     <div class="col-lg-6  d-flex flex-column justify-content-center" data-aos="fade-in">
@@ -283,7 +283,7 @@
 
                 <div class="row gy-4 align-items-center features-item">
                     <div class="col-md-5 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="100">
-                        <img src="assets/img/details-1.png" class="img-fluid" alt="">
+                        <img src="/img/details-1.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7" data-aos="fade-up" data-aos-delay="100">
                         <h3>Nextgen Digital Course Platform offers innovative, interactive, and scalable online learning solutions, empowering educators and learners with cutting-edge technology and engaging content.</h3>
@@ -467,17 +467,17 @@
     </script>
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/vendor/php-email-form/validate.js"></script>
+    <script src="/vendor/aos/aos.js"></script>
+    <script src="/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 
     <!-- Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script src="/js/main.js"></script>
 
     <nav>
     <href="Privacy.html.html">
