--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Main CSS File -->
-    <link href="/Nextgen//css/main.css" rel="stylesheet">
+    <link href="/Nextgen/main.css" rel="stylesheet">
 
 
     <!-- =======================================================
